# keras-diffusion-lab

./: .gitignore  BLOG.md  README.md  pyproject.toml  remote_train.py
artifacts/cfg-run/snapshots/: manifest.json
artifacts/cfg_diagnostic/: cross_class_similarity.npz  gap_distribution.npz  gap_vs_timestep.npz  guided_decomposition.npz  per_class_gap.npz
artifacts/ddim_comparison/: sampler_comparison.npz
artifacts/guidance_sweep/: sweep_results.npz
artifacts/metrics/: metrics_real_stats.npz
artifacts/reports/: diffusion_research_axes_2026.md  engineering_tips.md  keras_kinetic_tpu_field_notes.md  repo_migration_summary.md
artifacts/reports/cfg-diagnostic-2026-05/: cfg_diagnostic.md
decisions/: 001-ema-decay-tuning.md  002-unet-3-levels-for-28x28.md  003-class-conditional-cfg.md  004-guidance-scale-choice.md  005-chained-resume-training.md  006-attention-placement-inconsistency.md  TEMPLATE.md
experiments/: TEMPLATE.md
experiments/exp001-unconditional-fashionmnist-15k/: README.md
experiments/exp002-class-conditional-cfg-fashionmnist-15k/: README.md
scripts/: cfg_diagnostic.py  compare_samplers.py  denoising_gif.py  generate_keras_diagrams.py  generate_report_images.py  generate_research_plots.py  guidance_sweep.py  prepare_metrics.py
src/diffusion_harness/: __init__.py
src/diffusion_harness/base/: __init__.py  (+4 more)
tests/: __init__.py  test_cond_models.py  test_cond_sampling.py  test_cond_training.py  test_data.py  test_ddim_sampling.py  test_metrics.py  test_models.py  test_monitoring.py  test_sampling.py  test_schedules.py  test_training.py
(+34 files in other folders)
